gcc/testsuite/rust.test/compilable/infer_type1.rs
fn main() {
    let array: [_; 2] = [111, 222];
}
