gcc/testsuite/rust.test/fail_compilation/immutable4.rs
fn main() {
    let array: [i32; 3] = [0; 3];
    array[0] = 1;
}
